--- a/src/pages/LoginPage.page
+++ b/src/pages/LoginPage.page
@@ -2,9 +2,9 @@
     <apex:form >
         <apex:pageBlock >
             <apex:pageMessages />
-            <apex:pageBlockSection >
-                <apex:inputText value="{!loginHelper.user}"/>
-                <apex:inputSecret value="{!loginHelper.password}"/>
+            <apex:pageBlockSection columns="1" >
+                <apex:inputText label="E-mail" value="{!loginHelper.user}"/>
+                <apex:inputSecret label="Password" value="{!loginHelper.password}"/>
             </apex:pageBlockSection>
             <apex:pageBlockButtons location="bottom">
                 <apex:commandButton value="Login" action="{!login}"/>
